src/html/classic/css/gsa-style.css
/*
 * Greenbone Security Assistant
 * $Id$
 * Description: HTML stylesheet
 *
 * Authors:
 * Matthew Mundell <matthew.mundell@greenbone.net>
 * Karl-Heinz Ruskowski <karl-heinz.ruskowski@greenbone.net>
 * Jan-Oliver Wagner <jan-oliver.wagner@greenbone.net>
 *
 * Copyright:
 * Copyright (C) 2009-2016 Greenbone Networks GmbH
 *
 * This program is free software; you can redistribute it and/or
 * modify it under the terms of the GNU General Public License
 * as published by the Free Software Foundation; either version 2
 * of the License, or (at your option) any later version.
 *
 * This program is distributed in the hope that it will be useful,
 * but WITHOUT ANY WARRANTY; without even the implied warranty of
 * MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
 * GNU General Public License for more details.
 *
 * You should have received a copy of the GNU General Public License
 * along with this program; if not, write to the Free Software
 * Foundation, Inc., 51 Franklin St, Fifth Floor, Boston, MA 02110-1301 USA.
 */

/* set default width and height calculation behaviour */

/* border-box: actual width = border + padding + margin */
/*             actual height = border + padding + margin */
/* content-box: actual width = border + padding + margin + width */
/*              actual height = border + padding + margin + height */

html {
  -webkit-box-sizing: border-box;
  -moz-box-sizing: border-box;
  box-sizing: border-box;
}

*, *:before, *:after {
  -webkit-box-sizing: inherit;
  -moz-box-sizing: inherit;
  box-sizing: inherit;
}

body {
  margin: 0px;
  font: small Verdana, sans-serif;
  font-size: 12px;
  color: #1A1A1A;
}

a:link {
  color: blue;
  text-decoration: none;
}

a:hover, a:focus {
  color: blue;
  text-decoration: underline;
}

pre {
  white-space: pre-wrap;
  word-wrap: break-word;
}

img {
  border: 0px;
}

h1 {
  font-size: 20px;
}

h2 {
  font-size: 18px;
}

h3 {
  font-size: 16px;
}

h4 {
  font-size:14px;
  margin-bottom:0px;
}

form {
  font-size: 12px;
}

table {
  font-size: 12px;
  border: 0;
}

p {
  margin: 0 0 10px;
}

.pull-right {
  float: right;
}

.pull-left {
  float: left;
}

.text-center {
  text-align: center;
}

.text-left {
  text-align: left;
}

.text-right {
  text-align: right;
}

.text-justify {
  text-align: justify;
}

.text-nowrap {
  white-space: nowrap;
}

.footnote {
  font-size:10px;
  color: #787878;
  text-align:left;
}

.footnote a {
  font-size:10px;
  color: #787878;
  text-decoration: none;
}

.footnote a:hover {
  font-size:10px;
  color: #787878;
  text-decoration: underline;
}

.footnote a:focus {
  font-size:10px;
  color: #787878;
  text-decoration: underline;
}


.task {
  background-color: #FFFFFF;
  height: 50px;
  padding: 5px;
}

.task_odd {
  background-color: #d5d5d5;
  margin-top: 1px;
  height: 50px;
  padding: 5px;
}

.error {
  text-align: center;
  background-color: #FFFF99;
  border: 3px solid #CC0000;
  margin: 10px;
}

div.diff-line {
  white-space: pre;
  font-family: monospace;
}

div.diff-line-hunk {
  white-space: pre;
  font-family: monospace;
  color: #9932CC;
}

div.diff-line-plus {
  white-space: pre;
  font-family: monospace;
  color: #006400;
}

div.diff-line-minus {
  white-space: pre;
  font-family: monospace;
  color: #B22222;
}

/* BEGIN Risk factor colouring */

div.Critical {
  background-color: #FF0000;
}

div.High {
  background-color: #FF6666;
}

div.Medium {
  background-color: #FFAAAA;
}

div.Low {
  background-color: #FFDDDD;
}

div.None {
  background-color: #FFEEEE;
}

/* BEGIN severity level labels */

div.label_high {
  text-align: center;
  font-weight: normal;
  font-style: normal;
  background: #C83814 url('/img/p_bar_error.png') repeat-x;
  color: white;
  padding: 0px;
  border: 1px outset #C83814;
  display:inline-block;
}

div.label_medium {
  text-align: center;
  font-weight: normal;
  font-style: normal;
  background: #F0A519 url('/img/p_bar_request.png') repeat-x;
  color: white;
  padding: 0px;
  border: 1px outset #F0A519;
  display:inline-block;
}

div.label_low {
  text-align: center;
  font-weight: normal;
  font-style: normal;
  background: #4F91C7 url('/img/p_bar_done.png') repeat-x;
  color: white;
  padding: 0px;
  border: 1px outset #4F91C7;
  display:inline-block;
}

div.label_log {
  text-align: center;
  font-weight: normal;
  font-style: normal;
  background: #595959 url('/img/p_bar_bg.png') repeat-x;
  color: white;
  padding: 0px;
  border: 1px outset #191919;
  display:inline-block;
}

div.label_none {
  text-align: center;
  font-weight: normal;
  font-style: normal;
  background: #595959 url('/img/p_bar_bg.png') repeat-x;
  color: white;
  padding: 0px;
  border: 1px outset #191919;
  display:inline-block;
}

/* BEGIN Greenbone Progress Bar */

.progressbar_box {
  -webkit-box-sizing: content-box;
  -moz-box-sizing: content-box;
  box-sizing: content-box;

  margin-left:0px;
  margin-top:0px;

  height:12px;
  width:100px;
  background: #454545 url('/img/p_bar_bg.png');
  vertical-align:middle;
  text-align:center;
  border:1px solid #999999;
}

.progressbar_bar {
  height:12px;
  background:#70C000 url('/img/p_bar.png');
}

.progressbar_bar_done {
  height: 12px;
  background:#CCCCCC url('/img/p_bar_done.png');
}

.progressbar_bar_new {
  height: 12px;
  background: #df8e31 url('/img/p_bar_new.png');
}

.progressbar_bar_error {
  height: 12px;
  background: #bd3309 url('/img/p_bar_error.png');
}

.progressbar_bar_request {
  height: 12px;
  background: #bd8634 url('/img/p_bar_request.png');
}

.progressbar_bar_gray {
  height: 12px;
  background: silver url('/img/p_bar_gray.png');
}

.progressbar_text {
  z-index:3;
  position:relative;
  top:-12px;
  font-weight:bold;
  color:#FFFFFF;
  font-size:9px;
}

/* END Greenbone Progress Bar */

/* BEGIN Greenbone Tables */

table.gbntable {
  text-align:left;
  width: 100%;
  margin-bottom: 20px;
}

.gbntable th {
  background-color: #70C000;
}
/* ... */

